# robomagellan

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
action/: FollowWaypoints.action
cfg/: TrajectoryRollout.cfg
config/: ekf_global.yaml  ekf_local.yaml  etherbotix.yaml  fixed_lag_global.yaml  fixed_lag_local.yaml  graft.yaml  ground_filter.yaml  imu_calibration.yaml  mid360.json  nav2.yaml  robot_localization.yaml  rp2040.yaml
docs/: wiring.md
include/robomagellan/: convert_gps.hpp  gps.hpp  ground_bin_model.hpp  ground_filter.hpp  ground_grid_model.hpp  ground_model.hpp  path.hpp  rolling_ground_filter.hpp  trajectory_rollout.hpp  trajectory_rollout_ros.hpp  waypoint.hpp  waypoint_transformer.hpp
install/: install.bash
install/etc/init/: robot.conf  roscore.conf  sixad.conf
install/etc/ros/distro/: robot.launch
launch/: drivers.launch.py  robot.launch  robot.launch.py  um7.launch
launch/bagging/: raw_imu_odom_gps.launch
launch/compute/: ekf_global.launch.py  ekf_global.launch.xml  ekf_local.launch.py  ekf_local.launch.xml  fuse_global.launch.py  fuse_local.launch.py  gps.launch.py  gps.launch.xml  ground_filter.launch.py  imu.launch.py  imu.launch.xml  local_ekf.launch.xml  nav2.launch.py
launch/drivers/: base.launch.xml  gps.launch.xml  realsense.launch  teleop.launch.py  teleop.launch.xml  um7.launch.xml
launch/experimental/: livox_laserscan.launch.py  patchwork.launch.py
launch/gen1/: _drivers.launch.py  drivers.launch.py
launch/gen2/: _drivers.launch.py  drivers.launch.py
launch/include/: gps.launch.xml  graft.launch.xml  teleop.launch.xml
launch/install/etc/init/: ps3joy.conf  robot.conf  roscore.conf
launch/logging/: localization_tuning.launch
meshes/: base_link.stl  camera_mount.stl  cover.stl  hoop.stl  wheel.stl
scripts/: blind_lla_nav.py  geojson_from_bag.py  gps_tracks.py  remove_odom.py  rewrite_odom.py  sgp.py  simple_teleop.py
src/: convert_gps.cpp  gps.cpp  gps_to_cart.cpp  ground_filter.cpp  main.cpp  rolling_ground_filter.cpp  spherical_projector.cpp  trajectory_rollout.cpp  trajectory_rollout_ros.cpp  waypoint_nav_node.cpp  waypoint_transformer.cpp
src/robomagellan/: geojson.py  utm.py
srv/: FromLLA.srv  ToLLA.srv
test/: path_tests.cpp  trajectory_rollout_tests.cpp
urdf/: robot.urdf.xacro
