<package format="2">
  <name>robomagellan</name>
  <version>0.1.0</version>
  <description>
    Code for robomagellan, should probably come up with a better name.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- dependencies for building navigation code -->
  <depend>actionlib_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>robot_localization</depend>
  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- dependencies for robot startup -->
  <exec_depend>geodesy</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>imu_transformer</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>um7</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
